--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node server.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
@@ -18,12 +20,15 @@
   },
   "homepage": "https://github.com/cgu2020/carpool-server#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "firebase": "^9.1.3",
     "firebase-admin": "^10.0.0",
     "typescript": "^4.4.4"
   },
   "devDependencies": {
-    "@types/node": "^16.11.4"
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.11.4",
+    "ts-node": "^10.4.0"
   }
 }
